Error handling for social
